gcc/testsuite/gdc.test/compilable/must_use_suppress.d
import core.attribute;

@mustuse struct S {}

S fun() { return S(); }

void test()
{
    cast(void) fun();
}
